objects/TFS_AUP_Application_Access__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>TFS Automated User Provisioning Application Access</description>
    <fields>
        <fullName>TFS_AUP_Collections_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Collections Console</description>
        <inlineHelpText>Collections Console</inlineHelpText>
        <label>Collections Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_AUP_Customer_Service_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer Service Console</description>
        <inlineHelpText>Customer Service Console</inlineHelpText>
        <label>Customer Service Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_AUP_Knowledge_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Knowledge Management</description>
        <inlineHelpText>Knowledge Management</inlineHelpText>
        <label>Knowledge Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_AUP_RMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RMS</description>
        <inlineHelpText>RMS</inlineHelpText>
        <label>RMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_AUP_Rights_Letters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rights Letters</description>
        <inlineHelpText>Rights Letters</inlineHelpText>
        <label>Rights Letters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFS_AUP_Universal_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Universal Console</description>
        <inlineHelpText>Universal Console</inlineHelpText>
        <label>Universal Console</label>
        <type>Checkbox</type>
    </fields>
    <label>TFS AUP Application Access</label>
</CustomObject>